[gd_scene load_steps=2 format=3 uid="uid://dwru5o0lqlwmd"]

[ext_resource type="Script" uid="uid://ecdpjte115e8" path="res://Objects/Battle/Units/Components/range_weapon.gd" id="1_duvyj"]

[node name="RangeWeapon" type="Node2D"]
visible = false
script = ExtResource("1_duvyj")

[node name="AreaRange" type="Area2D" parent="."]
z_index = 8
z_as_relative = false
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaRange"]
visible = false
modulate = Color(0, 1, 1, 1)
z_index = 8
z_as_relative = false
polygon = PackedVector2Array(0, 0, 809.017, -587.785, 743.145, -669.131, 669.131, -743.145, 587.785, -809.017, 500, -866.025, 406.737, -913.545, 309.017, -951.057, 207.912, -978.148, 104.528, -994.522, -1.83691e-13, -1000, -104.528, -994.522, -207.912, -978.148, -309.017, -951.057, -406.737, -913.545, -500, -866.025, -587.785, -809.017, -669.131, -743.145, -743.145, -669.131, -809.017, -587.785, 0, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
z_index = 8
z_as_relative = false
color = Color(0.360784, 0.305882, 0.74902, 0.211765)
polygon = PackedVector2Array(0, 0, 809.017, -587.785, 743.145, -669.131, 669.131, -743.145, 587.785, -809.017, 500, -866.025, 406.737, -913.545, 309.017, -951.057, 207.912, -978.148, 104.528, -994.522, -1.83691e-13, -1000, -104.528, -994.522, -207.912, -978.148, -309.017, -951.057, -406.737, -913.545, -500, -866.025, -587.785, -809.017, -669.131, -743.145, -743.145, -669.131, -809.017, -587.785, 0, 0)

[node name="Line2D" type="Line2D" parent="."]
z_index = 8
z_as_relative = false
points = PackedVector2Array(0, 0, 809.017, -587.785, 743.145, -669.131, 669.131, -743.145, 587.785, -809.017, 500, -866.025, 406.737, -913.545, 309.017, -951.057, 207.912, -978.148, 104.528, -994.522, -1.83691e-13, -1000, -104.528, -994.522, -207.912, -978.148, -309.017, -951.057, -406.737, -913.545, -500, -866.025, -587.785, -809.017, -669.131, -743.145, -743.145, -669.131, -809.017, -587.785, 0, 0)
default_color = Color(0.921569, 0.00784314, 0.00784314, 0.470588)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AreaRange" to="." method="_on_area_range_area_entered"]
[connection signal="area_exited" from="AreaRange" to="." method="_on_area_range_area_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
